Sun Jun 06 06:34:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_Request.h:
	* protocols/ace/INet/HTTP_Response.h:
	  Fix attempt for covariant return issue on LynxOS.

Sun Jun 06 06:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/StreamHandler.h:
	* protocols/ace/INet/HTTP_URL.h:
	* protocols/ace/INet/HTTP_Status.h:
	* protocols/ace/INet/HTTP_IOStream.h:
	* protocols/ace/INet/HTTP_Request.h:
	* protocols/ace/INet/BufferedStreamBuffer.h:
	* protocols/ace/INet/HTTP_Response.h:
	* protocols/ace/INet/BidirStreamBuffer.h:
	* protocols/ace/INet/Sock_IOStream.h:
	* protocols/ace/INet/StreamInterceptor.h:
	* protocols/ace/INet/HeaderBase.h:
	* protocols/ace/INet/HTTP_ClientRequestHandler.h:
	* protocols/ace/INet/HTTP_Header.h:
	  Fixes for pragma once warnings.

Sun Jun 06 06:08:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_Status.cpp:
	* protocols/ace/INet/HTTP_Status.h:
	  Fix for nameclash with standard macro in VxWorks.

	* protocols/ace/INet/HTTP_StreamPolicy.cpp:
	  Bugfix for incorrect array index.

Sat Jun 05 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/ConnectionCache.cpp:
	* protocols/ace/INet/ConnectionCache.h:
	  Fix for nameclash with standard macro in VxWorks.

Sat Jun 05 07:21:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_URL.h:
	* protocols/ace/INet/HTTP_URL.inl:
	  Fix for HPUX compile warning.

Sat Jun 05 07:11:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_StreamPolicy.cpp:
	* protocols/ace/INet/HTTP_StreamPolicy.h:
	  Fix attempt for AIX compile problem.

Sat Jun 05 06:21:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_URL.cpp:
	  Fixed typo.

Sat Jun 05 06:09:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/IOS_util.h:
	  Fixed missing export declaration.

	* protocols/ace/INet/URLBase.h:
	* protocols/ace/INet/URLBase.cpp: